# notemancy-server

./: .gitignore  Cargo.toml
src/: main.rs  search.rs  utils.rs
