[package]
name = "notemancy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
notemancy-core = { path = "../notemancy-core" }
serde = { version = "1.0", features = ["derive"] }
rocket_cors = "0.6.0"
meilisearch-sdk = "0.28.0"
serde_json = "1.0.140"
once_cell = "1.21.1"
tokio = "1.44.1"
serde_yaml = "0.9.34"
chrono = "0.4.40"
