[package]
name = "notemancy-server"
version = "0.1.0"
edition = "2024"
authors = ["Rishikanth Chandrasekaran rishikanthc@gmail.com"]
description = "A REST API server for notemancy-web"
license = "MIT"
readme = "README.md"
repository = "https://github.com/notemancy-pkm/notemancy-server"


[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
notemancy-core = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
rocket_cors = "0.6.0"
meilisearch-sdk = "0.28.0"
serde_json = "1.0.140"
once_cell = "1.21.1"
tokio = "1.44.1"
serde_yaml = "0.9.34"
chrono = "0.4.40"
